Adding a fav.ico

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App-header {
   text-align: center;
-  background-color: #f442b3;
+  background: linear-gradient(-90deg, #27e1dc,#3391d7);
   height: 120px;
   padding: 10px;
   color: #ffffff;
